--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,10 @@
 <IfModule mod_rewrite.c>
 
-    <IfModule mod_negotiation.c>
-        Options -MultiViews
-    </IfModule>
-
     RewriteEngine On
+
+    # Redirect HTTPS to HTTP
+    RewriteCond %{HTTP:X-Forwarded-Proto} =https
+    RewriteRule ^(.*)$ http://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
     RewriteCond %{REQUEST_FILENAME} -d [OR]
     RewriteCond %{REQUEST_FILENAME} -f
@@ -18,4 +18,3 @@
     RewriteRule ^ server.php
 
 </IfModule>
-
