--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "doctrine/dbal": "^2.0",
         "fideloper/proxy": "^4.0",
+        "kreait/firebase-php": "^5.22",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "mcamara/laravel-localization": "^1.3"
