--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.6",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.9"
     }
 }
